# arborist

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  run_demo.sh  setup.sh
benchmarks/: CMakeLists.txt  benchmark.cpp
docs/: BT_FRAMEWORK_PLAN.md  MANUAL.md  TECHNICAL.md  technical-bt-framework.epub
editor/: CMakeLists.txt  README.md  editor.cpp  run.sh
examples/: CMakeLists.txt  demo.cpp  smoke.cpp
include/bt/: Action.h  BehaviorAction.h  BehaviorBuilder.h  BehaviorEntry.h  BehaviorTree.h  Blackboard.h  BlackboardDiff.h  ComplexityAnalyzer.h  CompositeNode.h  Condition.h  ContractValidator.h  DecisionEmitter.h  EditorServer.h  LazySubtree.h  MockEngine.h  MonitorQuery.h  MonitorServer.h  Node.h  Parallel.h  PartitionConfig.h  PathExplorer.h  Policy.h  PriorityResolver.h  RegistrySpec.h  RegistryStore.h  RuntimeRegistry.h  ScenarioRunner.h  ScenarioStep.h  SchemaLoader.h  SchemaNode.h  SchemaParser.h  SchemaSerializer.h  SchemaValidator.h  Selector.h  Sequence.h  Simulator.h  StateRegistry.h  Status.h  SubtreeScope.h  TickPool.h  (+5 more)
playground/: CMakeLists.txt  README.md  playground.cpp  run.sh
src/adapter/: capi.cpp
src/analysis/: ComplexityAnalyzer.cpp  LazySubtree.cpp  SubtreeScope.cpp
src/builder/: BehaviorAction.cpp  BehaviorBuilder.cpp  PriorityResolver.cpp  TreeAssembler.cpp
src/harness/: ContractValidator.cpp  PathExplorer.cpp  ScenarioRunner.cpp
src/monitor/: BlackboardDiff.cpp  EditorServer.cpp  MonitorQuery.cpp  MonitorServer.cpp  TreeSerializer.cpp  editor.html  editor.js  simulator.html  simulator.js  viewer.html  viewer.js
src/registry/: .clang-tidy  RegistryStore.cpp  RuntimeRegistry.cpp  SchemaSerializer.cpp
src/runtime/: BehaviorTree.cpp  CompositeNode.cpp  DecisionEmitter.cpp  Node.cpp  Parallel.cpp  Policy.cpp  Selector.cpp  Sequence.cpp  TickPool.cpp  TreeUtils.cpp
src/schema/: SchemaLoader.cpp  SchemaNode.cpp  SchemaParser.cpp  SchemaValidator.cpp
src/simulator/: MockEngine.cpp  Simulator.cpp
src/validation/: Validator.cpp
tests/: .clang-tidy  CMakeLists.txt  phase0_setup.cpp  phase10_threads.cpp  phase11_adapter.cpp  phase1_runtime.cpp  phase2_schema.cpp  phase3_registry.cpp  phase4_simulator.cpp  phase5_monitor.cpp  phase6_harness.cpp  phase7_analysis.cpp  phase8_performance.cpp  phase9_editor.cpp  step0_pipeline.cpp  step1_status.cpp  step2_node.cpp  step3_composites.cpp  test_arborist.cpp
vcpkg-port/: portfile.cmake  vcpkg.json
